--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit==1.26.0
-shap==0.42.1
-pandas==2.0.3
+streamlit==1.37.1
+shap==0.42.0
+pandas==2.1.4
 scikit-learn==1.3.0
 matplotlib==3.7.2
-numpy==1.25.1
+numpy==1.26.4
+streamlit-shap==1.0.2
